--- a/base.html
+++ b/base.html
@@ -12,9 +12,10 @@
 
 	<title>{% if page_title %}{{ page_title }} - {% endif %}{{ site_name }}</title>
 
-        <link href="{{ base_url }}/css/bootstrap-custom.min.css" rel="stylesheet">
-        <link href="{{ base_url }}/css/font-awesome-4.5.0.css" rel="stylesheet">
+        <link href="{{ base_url }}/css/bootstrap-3.3.7.min.css" rel="stylesheet">
+        <link href="{{ base_url }}/css/font-awesome-4.6.3.css" rel="stylesheet">
         <link href="{{ base_url }}/css/base.css" rel="stylesheet">
+        <link href="{{ base_url }}/css/color.css" rel="stylesheet">
         <link rel="stylesheet" href="{{ base_url }}/css/highlight.css">
         {%- for path in extra_css %}
         <link href="{{ path }}" rel="stylesheet">
@@ -58,8 +59,8 @@
             <p>Documentation built with <a href="http://www.mkdocs.org/">MkDocs</a>.</p>
         </footer>
 
-        <script src="{{ base_url }}/js/jquery-1.10.2.min.js"></script>
-        <script src="{{ base_url }}/js/bootstrap-3.0.3.min.js"></script>
+        <script src="{{ base_url }}/js/jquery-1.12.4.min.js"></script>
+        <script src="{{ base_url }}/js/bootstrap-3.3.7.min.js"></script>
         <script src="{{ base_url }}/js/highlight.pack.js"></script>
         <script>var base_url = '{{ base_url }}';</script>
         <script data-main="{{ base_url }}/mkdocs/js/search.js" src="{{ base_url }}/mkdocs/js/require.js"></script>
