Show search and github in xs nav menu

--- a/nav.html
+++ b/nav.html
@@ -45,7 +45,7 @@
                 <li>
                     <a href="#" data-toggle="modal" data-target="#mkdocs_search_modal">
                         <i class="fa fa-search"></i>
-                        <span class="visible-md-inline visible-lg-inline">Search</span>
+                        <span class="visible-xs-inline visible-md-inline visible-lg-inline">Search</span>
                     </a>
                 </li>
                 {% if include_next_prev %}
@@ -68,7 +68,7 @@
                             {% elif repo_name == 'Bitbucket' %}
                                 <i class="fa fa-bitbucket"></i>
                             {% endif %}
-                            <span class="visible-lg-inline">{{ repo_name }}</span>
+                            <span class="visible-xs-inline visible-lg-inline">{{ repo_name }}</span>
                         </a>
                     </li>
                 {% endif %}
